# CMakeProjectTemplates

./: .gitignore  README.md
ApplicationTemplate/: .clang-tidy  CMakeLists.txt
ApplicationTemplate/src/: CMakeLists.txt
LibraryTemplate/: .clang-format  CMakeLists.txt
LibraryTemplate/example/: CMakeLists.txt  main.cpp
LibraryTemplate/src/: CMakeLists.txt  MyLib.cpp  MyLib.h
LibraryTemplate/src/impl/: MyLibImpl.cpp  MyLibImpl.h
